--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
 <body>
     <h1>About Me</h1>
 <hr>
-<p>
+<p draggable="false">
     <h3>Skills I have learned</h3>
     <img width="4%" src="https://camo.githubusercontent.com/f291ab881e7b284e6788559ce452a5aecb833d947503dbc3b33033bb7555e2c5/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f61726475696e6f2d312e737667" alt="Arduino"> 
     <img width="4%" src="https://camo.githubusercontent.com/e0487aed7f40cdb906e065533fd877b70266647e6abdd0642b2b2c368eebda18/68747470733a2f2f646f776e6c6f61642e626c656e6465722e6f72672f6272616e64696e672f636f6d6d756e6974792f626c656e6465725f636f6d6d756e6974795f62616467655f77686974652e737667" alt="Blender"> 
