--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,8 @@
 <body>
     <h1>About Me</h1>
 <hr>
-<p draggable="false">
+<div onmousedown="return false" onselectstart="return false" oncontextmenu="return false">
+<p>
     <h3>Skills I have learned</h3>
     <img width="4%" src="https://camo.githubusercontent.com/f291ab881e7b284e6788559ce452a5aecb833d947503dbc3b33033bb7555e2c5/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f61726475696e6f2d312e737667" alt="Arduino"> 
     <img width="4%" src="https://camo.githubusercontent.com/e0487aed7f40cdb906e065533fd877b70266647e6abdd0642b2b2c368eebda18/68747470733a2f2f646f776e6c6f61642e626c656e6465722e6f72672f6272616e64696e672f636f6d6d756e6974792f626c656e6465725f636f6d6d756e6974795f62616467655f77686974652e737667" alt="Blender"> 
@@ -25,5 +26,6 @@
     <img width="4%" src="https://camo.githubusercontent.com/05dcd14dd5bbb56317db03153ecdbeb6aadbd4be251a10dab702a0158b5ad6a0/68747470733a2f2f75706c6f61642e77696b696d656469612e6f72672f77696b6970656469612f636f6d6d6f6e732f322f32312f4d61746c61625f4c6f676f2e706e67" alt="Matlab">
     <img width="4%" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python">
 </p>
+</div>
 </body>
 </html>
